<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="converter">Converter</string>
    <string name="last_update_13_30">Last update 13:30</string>
    <string name="rus">RUS - российский рубль</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="info">Info</string>
    <string name="app_version_1_0">app version 1.0</string>
    <string name="change_currency">Change currency</string>
    <string name="asdadsads">asdadsads</string>
    <string name="search_currency">Search currency</string>
</resources>
